// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders an InfoLabel with a characterCounter 1`] = `
<span
  className="controlNote label"
>
  <strong>
    0
  </strong>
  /
  500
</span>
`;

exports[`Renders an InfoLabel with a characterCounter and displays correct count and maxLength 1`] = `
<span
  className="controlNote label"
>
  <strong>
    4
  </strong>
  /
  150
</span>
`;

exports[`Renders an InfoLabel with a characterCounter and displays the requiredLabel, when value isn't set 1`] = `
<span
  className="controlNote label"
>
  required
</span>
`;

exports[`Renders an InfoLabel without crashing 1`] = `
<span
  className="controlNote label"
>
  required
</span>
`;
